plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version "${forge_gradle_version_range}"
    id 'org.spongepowered.mixin' version '0.7.+'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'


}
version = mod_version
group = 'com.lycanitesmobs'
archivesBaseName = 'lycanitesmobs'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {
    mappings channel: mapping_channel, version: mapping_version
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        configureEach {
            property('terminal.ansi', 'true')
        }
        client {
            workingDirectory project.file('run')
            args '--mixin.config=lycanitesmobs.mixins.json', '--debug', '--username', "Dev"
            property 'forge.client.window.title', "Dev"
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'lycanitesmobs'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            property 'forge.logging.markers', 'REGISTRIES'

            //jvmArgs "-Xlog:gc*,safepoint:file=gc-client.log:time,uptime,level,tags"

            mods {
                lycanitesmobs {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            //jvmArgs "-Xlog:gc*,safepoint:file=gc-server.log:time,uptime,level,tags"

            mods {
                lycanitesmobs {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES,REGISTRYDUMP'
            property 'forge.logging.console.level', 'debug'
            args '--mod', 'lycanitesmobs', '--all', '--output', file('src/generated/resources/')


            mods {
                lycanitesmobs {
                    source sourceSets.main
                }
            }
        }
    }
}


sourceSets.main.resources { srcDir 'src/generated/resources' }
repositories {
    mavenCentral()
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
}
dependencies {
    minecraft fg.deobf("net.minecraftforge:forge:$minecraft_version-$forge_version")
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    implementation fg.deobf("io.github.llamalad7:mixinextras-common:0.2.1")
    implementation fg.deobf("curse.maven:oculus-581495:6020952")
    implementation fg.deobf("curse.maven:embeddium-908741:5681725")
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "lycanitesmobs",
                "Specification-Vendor"    : "lycanite",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : "${minecraft_version}",
                "Implementation-Vendor"   : "lycanite",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'MixinConfigs'            : "lycanitesmobs.mixins.json"
        ])
    }
}

jar.finalizedBy('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}

mixin {
    add sourceSets.main, "lycanitesmobs.refmap.json"
    config "lycanitesmobs.mixins.json"
}
